Changes from Version 0.15-21 to 0.15-22 [22-Jan-2014]

* crs.messages=FALSE was being ignored in frscv, krscv, frscvNOMAD, and
  krscvNOMAD, as was the passing of additional arguments via opts=list()
  to snomadr from certain functions

* Default settings for tuning parameters for snomadr in npglpreg have been
  optimized based on extensive simulations for simulated and real datasets
  (we `optimized the optimizer' so to speak)

* Fixed glitch in npglpreg where cv.aic was only working properly for
  the local constant estimator (i.e. degree=0)

* bwscaling is deprecated in the latest (development) version of np which
  necessitated changes to npglpreg. In the process the way scaling is
  performed ought to be more robust in general due to changes to default
  starting values for numeric predictors

Changes from Version 0.15-19 to 0.15-21 [08-Jan-2014]

* Addressed issues with certain non-package files being included via use
  of .Rbuildignore

* NOMAD team corrected dereferencing null pointer in Mads.cpp that was
  uncovered through the use of UB sanitizer checks with clang

Changes from Version 0.15-18 to 0.15-19 [30-Dec-2013]

* Updated snomadr to NOMAD 3.6.2 (released Dec 2013) which resolves
  crash/incompatibility with the clang compiler on Mac OS X Mavericks 10.9.1

* Added new function clsd() that does logspline regression jointly
  choosing the degree and number of segments (knots) - this is to be
  treated as beta but the univariate continuous only case currently
  implemented is capable of outperforming existing logspline methods that
  set the spline degree to an ad hoc value (3)

* npglpreg() now optimizes at the level of the bandwidth scaling factors
  (thanks to Sebastien Le Digabel for the suggestion) to bring
  parameters to a `common scale'

* For cross-validation with npglpreg() we test for very large
  bandwidths for the continuous predictors (> bandwidth.switch
  robust standard deviations) then switch to the global