@@ -1,6 +1,6 @@
 Package: crs
 Version: 0.15-22
-Date: 2014-05-02
+Date: 2014-05-04
 Imports: boot, stats
 Suggests: np, npRmpi, rgl, quadprog, quantreg, logspline
 Title: Categorical Regression Splines
